--- a/carousel.css
+++ b/carousel.css
@@ -5,7 +5,7 @@
 body {
   padding-top: 3rem;
   /* padding-bottom: 3rem; */
-  color: rgb(var(--bs-tertiary-color-rgb));
+  /* color: rgb(var(--bs-tertiary-color-rgb)); */
 
 }
 
@@ -82,25 +82,93 @@ body {
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 700px) and (max-width: 768px) {
+  /* main {
+    position: absolute;
+    top: 60px;
+    bottom: 60px;
+    left: 0;
+    right: 0;
+    background-color: lightblue;
+    overflow-y: auto; /* Si el contenido es más grande que el espacio, se podrá hacer scroll */
+
+  main{
+    flex-grow: 1;
+      /* background-color: lightblue; */
+      /* padding: 20px; */
+  }
+
   .carousel-item{
-		height: 13.5rem;
+		height: 18.5rem;
 	}
 }
-@media (min-width: 360px) and (max-width: 414px){
+
+@media (min-width: 320px) and (max-width: 414px){
   .carousel-item{
-		height: 10.5rem;
-	}  
+		height: 9.5rem;
+	}
+}
+@media (min-width: 320px) and (max-width: 390px){
+  .carousel-item{
+		height: 9.5rem;
+	}
+  .popup-button {
+    margin-left: 31%;
+    margin-top: -30%;
+    }
 }
 @media (min-width: 768px) and (max-width: 991px){
   .carousel-item{
-    height: 21.5rem;
-  } 
+    height: 20rem;
+  }
+  .popup-button {
+    margin-left: 40%;
+    margin-top: -11%;
+    }
 }
+/* @media (min-width: 768px) and (max-width: 912px){
+  .carousel-item{
+    height: 23.9rem;
+  }
+} */
+/* @media (min-width: 768px) and (max-width: 820px){
+  .carousel-item{
+    height: 21.5rem;
+  }
+} */
 @media(max-width: 300px){
   .carousel-item{
     height: 7.5rem;
   }
-  } 
+  }
+  @media(min-width: 420px) and (max-width: 540px){
+    main{
+      width: 100%;
+    }
+    .carousel-item{
+      height: 13.5rem;
+    }
+    .popup-button {
+      margin-left: 40%;
+      margin-top: -6%;
+      }
+    }
 
+  @media only screen and (min-width: 820px)
+  {
+    .carousel-item{
+      height: 21.5rem;
+    }
+
+  }
+  @media (min-width: 820px)and (max-width:912px)
+  {
+    .carousel-item{
+      height: 23.9rem;
+    }
+    .popup-button {
+      margin-left: 40%;
+      margin-top: -21%;
+      }
+  }
 
