--- a/estilos.css
+++ b/estilos.css
@@ -4,20 +4,52 @@
 	box-sizing: border-box;
   }
   
+  html, body {
+	/* height: 100%;
+	margin: 0; */
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	
+}
+	body {
+		/* display: flex;
+		flex-direction: column; */
+		display: flex;
+		flex-direction: column;
+		min-height: 100vh;  
+		background-color: #d0d0d0;
+	}
+	.portada > img{
+		width:inherit;
+		/* margin-top: 70px; */
+	}
+	.contacto > img{
+		width:100%;
+		height: auto;
+		margin-top: 25%;
+	}
+	.container{
+		margin-top: -50px;
+	}
+	.navbar-brand{
+		font-size: 0.9em;
+	}
 
-
-body{
+/* body{
 
 	margin:0;
 	padding:0;
 	width: 100%;
 	background-color: #d0d0d0;
-}
+} */
 main{
-	display: flex;
+	/* display: flex;
 	justify-content: center;
 	flex-direction: column;
-	width: 100%;
+	width: 100%; */
+	flex: 1;
+   /* background-color: lightblue;  Solo para que veas que ocupa espacio */
 	
 }
 
@@ -68,8 +100,8 @@ main{
 	margin-top: 10px;
 	position:absolute;
 	z-index: 1500;
-	margin-left: 48%;
-	margin-top: -90px;
+	margin-left: 40%;
+	margin-top: -53%;
   }
   
   .popup-button .btn {
@@ -97,8 +129,6 @@ main{
     margin-bottom: 0px;
     padding: 1em 0;
     margin-top: auto;
-    
-
 }
 .foto-1{
 	background-image: url(/img/Flayer1.webp);
@@ -123,7 +153,17 @@ main{
 	background-repeat: no-repeat;
 	background-color: #000;
 }
-
+@media (min-width: 700px) and (max-width: 768px){
+.contacto > img{
+	width:100%;
+	height: auto;
+	margin-top: 25%;
+}
+.portada > img{
+	width:inherit;
+	/* margin-top: 70px; */
+}
+}
   @media (max-width: 768px) {
 	.mfp-content {
 	  width: 90% !important; /* Asegura que se adapte a pantallas pequeñas */
@@ -248,8 +288,8 @@ main{
 
 	}
 	.popup-button{
-		margin-left: 40%;
-		margin-top: -115px;
+		margin-left: 35%;
+		margin-top: -202px;
 	}
 	
 }
