--- a/magnific-popup.css
+++ b/magnific-popup.css
@@ -43,7 +43,7 @@
   .mfp-content {
     position: relative;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: top;
     margin: 0 auto;
     text-align: left;
     z-index: 1045; }
