--- a/limpieza.css
+++ b/limpieza.css
@@ -258,7 +258,7 @@ footer {
     padding: 1.5em 0;
     margin-top: auto;
 }
-footer>p{
+/* footer>p{
     font-size: 1em;
     color: black;
     font-weight: bold;
@@ -271,7 +271,32 @@ a{
 
    a:active {
   color: blue;
-    }
+    } */
+/*footer nuevo*/
+/* footer a {
+    color: #f5c400;
+    text-decoration: none;
+    transition: color 0.3s ease, opacity 0.3s ease;
+    opacity: 0.7;
+}
+
+footer a:hover {
+    opacity: 1;
+    color: #ffffff;
+} */
+
+footer a {
+    color: #000000;
+    text-decoration: none;
+    transition: color 0.3s ease, opacity 0.3s ease;
+    opacity: 0.7;
+    font-weight: bold;
+}
+
+footer a:hover {
+    opacity: 1;
+    color: #ffffff;
+}
 
 
 /* Carrusel */
